--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   qr_code_tools: ^0.0.7
   file_picker: ^4.3.1
   url_launcher: ^5.4.0
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
@@ -67,15 +68,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Ubuntu
+      fonts:
+       - asset: assets/fonts/Ubuntu-Regular.ttf
+   #    - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: FlutterIcons
+      fonts:
+        - asset: assets/fonts/FlutterIcons.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
