--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   file_picker: ^4.3.1
   url_launcher: ^5.4.0
   charts_flutter: ^0.12.0
+  device_info: ^2.0.3
 
 dev_dependencies:
   flutter_test:
