--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^0.1.3
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
+  cupertino_icons: ^1.0.4
   bubble_tab_indicator: ^0.1.4
   fl_chart: ^0.9.4
   qr_flutter: ^4.0.0
@@ -37,16 +40,29 @@ dependencies:
   url_launcher: ^5.4.0
   charts_flutter: ^0.12.0
   device_info: ^2.0.3
+  flutter_nearby_connections: ^1.1.1
+  http: ^0.13.4
+  flutter_styled_toast: ^2.0.0
+  foreground_service: ^2.0.1+1
+  flutter_cupertino_settings: ^0.5.0
+  font_awesome_flutter: ^9.2.0
+  base45: ^0.0.3
+  dart_cose: ^1.1.3
+ 
+
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
